fix gen deps
