# example/api/swagger/swagger.json
@@ -6,6 +6,38 @@
         "version": "20250320"
     },
     "paths": {
+        "/api/v1/blackhole": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "EchoService"
+                ],
+                "parameters": [
+                    {
+                        "description": "body of the request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.EchoRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/emptypb.Empty"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/example/messages": {
             "get": {
                 "security": [
@@ -29,13 +61,6 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Number of items per page",
-                        "name": "per_page",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
                         "type": "array",
                         "items": {
                             "type": "integer"
@@ -43,6 +68,13 @@
                         "collectionFormat": "csv",
                         "description": "List of message IDs",
                         "name": "ids",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items per page",
+                        "name": "per_page",
                         "in": "query",
                         "required": true
                     }
@@ -229,6 +261,19 @@
                 }
             }
         },
+        "api.EchoRequest": {
+            "type": "object",
+            "properties": {
+                "channel": {
+                    "description": "Channel",
+                    "type": "string"
+                },
+                "message": {
+                    "description": "Message",
+                    "type": "string"
+                }
+            }
+        },
         "api.GetMessageResponse": {
             "type": "object",
             "properties": {
@@ -359,6 +404,9 @@
                 "Status_STATUS_DRAFT",
                 "Status_STATUS_PUBLISHED"
             ]
+        },
+        "emptypb.Empty": {
+            "type": "object"
         }
     },
     "securityDefinitions": {
